--- a/UrlShortener.Infrastructure/UrlShortener.Infrastructure.csproj
+++ b/UrlShortener.Infrastructure/UrlShortener.Infrastructure.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UrlShortener.Application\UrlShortener.Application.csproj" />
     <ProjectReference Include="..\UrlShortener.Domain\UrlShortener.Domain.csproj" />
   </ItemGroup>
 
