--- a/UrlShortener.WebApp/UrlShortener.WebApp.csproj
+++ b/UrlShortener.WebApp/UrlShortener.WebApp.csproj
@@ -5,5 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+	<ItemGroup>
+		<Content Update="wwwroot\css\site.css" CopyToPublishDirectory="Never" />
+	</ItemGroup>
 </Project>
