--- a/UrlShortener.WebApp/UrlShortener.WebApp.csproj
+++ b/UrlShortener.WebApp/UrlShortener.WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,5 +7,10 @@
   </PropertyGroup>
 	<ItemGroup>
 		<Content Update="wwwroot\css\site.css" CopyToPublishDirectory="Never" />
+
+		<Content Update="wwwroot\favicon.ico" CopyToPublishDirectory="Never" />
+
+		<Content Update="wwwroot\js\site.js" CopyToPublishDirectory="Never" />
+
 	</ItemGroup>
 </Project>
