change database from local MySql to Postgres

--- a/backend/UrlShortener.Api/appsettings.json
+++ b/backend/UrlShortener.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=UrlShortenerDb;Trusted_Connection=True;"
+    "DefaultConnection": "Host=localhost;Database=chibi_link_db;Username=postgres;Password=postgres"
   }
 }
