finish backend for login and register

--- a/backend/UrlShortener.Api/appsettings.json
+++ b/backend/UrlShortener.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=chibi_link_db;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Issuer": "https://localhost:7001",
+    "Audience": "https://localhost:7001",
+    "SecretKey": "VERY_STRONG_AND_LONG_SECRET_KEY_REPLACE_IT_LATER_1234567890!@#$%^"
   }
 }
