connect database from host device

--- a/backend/UrlShortener.Api/appsettings.Development.json
+++ b/backend/UrlShortener.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=chibi_link_db;Username=chibiuser;Password=chibipassword;"
   }
 }
